--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
   "description": "Проектная работа messenger",
-  "main": "index.js",
+  "engineStrict": true,
+  "engines": {
+    "npm": "^10.x",
+    "node": "^20.x"
+  },
   "scripts": {
     "start": "vite --mode development",
     "build": "vite build"
